Prevent line break in Allowed Groups label
- Add CSS to keep label text on single line

--- a/common/common.scss
+++ b/common/common.scss
@@ -4,3 +4,8 @@
 body[class*="show-custom-field-"] .public-user-field {
   display: block !important;
 }
+
+// Prevent line break in "Allowed Groups" label
+.admin-config-area-card__content label {
+  white-space: nowrap;
+}
